# voice-agent-learning

./: .gitignore  main.py  pyproject.toml
backend/: app.py  assembly.py  deepgram-try.py  models.py  streamlit.py  stt_service.py  test.py  tts.py
backend/data/: knowledge_base.txt
frontend/: app.css  app.js  index.html  main.html  style.css
frontend/improve-css/app/: page.tsx
frontend/improve-css/components/: voice-assistant.tsx
